--- a/src/assets/css/page/user.css
+++ b/src/assets/css/page/user.css
@@ -122,7 +122,7 @@
 
 
 .user-nav ul {
-  margin-bottom: .8rem;
+  margin-bottom: 10px;
   background: #fff;
 }
 .user-nav {
@@ -135,13 +135,20 @@
 .user-nav ul li a {
   display: block;
   color: #666;
-  font-size: 1.4rem;
+  font-size: 14px;
 }
 .user-nav ul li a .user-nav-tit {
   position: relative;
   margin: 0 1rem;
-  padding: 1.4rem 0;
+  padding: 15px 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+.user-nav ul li a .user-nav-tit .icon{
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  margin-right: 5px;
+  vertical-align: middle;
 }
 .user-nav ul li:last-child a .user-nav-tit {
   border-bottom: none;
@@ -159,6 +166,6 @@
   top: 1.8rem;
   right: 0;
   color: rgba(0, 0, 0, 0.3);
-  font-size: 1.2rem;
+  font-size: 12px;
 }
 
